@@ -4,10 +4,15 @@ Data Crow version 4.12                        Released on 2024-xx-xx
 
 [Updated]
 - Updated libraries as used by Data Crow to avoid exposure to vulnerabilities:
-  Apache Maven plugins, IZ Pack, Metadata-extractor, Log4j, bouncycastle, twelvemonkeys.imageio, org.apache.tika,
-  org.apache.pdfbox, org.jsoup, com.google.code.gson, net.sf.jasperreports, xalan, org.hsqldb, org.apache.xmlgraphics
+  Apache Maven plugins, IZ Pack, Metadata-extractor, Log4j, Bouncy Castle, twelvemonkeys.imageio, org.apache.tika,
+  org.apache.pdfbox, org.jsoup, com.google.code.gson, net.sf.jasperreports, Xalan, org.hsqldb, org.apache.xmlgraphics
 - Data Crow minimum Java version has been increased from Java 11 to Java 18.
 - Small layout improvements for the item form and the login dialog.
+- Scrolling performance has been improved for the card list.
+
+[Fixed]
+- Right-click menu on attachment: icon size too large.
+- Icons in main window were blurry.
 
 
 --------------------------------------------------------------------
